--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor=silver>
+<body bgcolor=black>
 <center>
 <h2><font color=red>Hello From DevOps WebPage!</font></h2>
 <font color=blue>www.adv-it.net</font>
