--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body bgcolor=silver>
 <center>
-<h2><font color=blue>Hello From DevOps WebPage!</font></h2>
+<h2><font color=red>Hello From DevOps WebPage!</font></h2>
 <font color=blue>www.adv-it.net</font>
 </center>
 </body>
